--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/d3-array": "^3.2.1",
     "@types/d3-axis": "^3.0.6",
     "@types/d3-fetch": "^3.0.7",
+    "@types/d3-format": "^3.0.4",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.5",
